--- a/gameoflife-core/pom.xml
+++ b/gameoflife-core/pom.xml
@@ -64,6 +64,14 @@
                        <format>xml</format>
                     </formats>
                 </configuration>
+                <executions>
+                    <execution>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>cobertura</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </reporting>
