--- a/pom.xml
+++ b/pom.xml
@@ -503,7 +503,7 @@
                         </configuration>
                         <executions>
                             <execution>
-                                <phase>package</phase>
+                                <phase>test</phase>
                                 <goals>
                                     <goal>cobertura</goal>
                                 </goals>
