--- a/gameoflife-core/pom.xml
+++ b/gameoflife-core/pom.xml
@@ -61,6 +61,7 @@
                 <configuration>
                     <formats>
                         <format>xml</format>
+                        <format>html</format>
                     </formats>
                 </configuration>
             </plugin>
